# src/Collection/App/CommandHandler/AddAlbumCommandHandler.php
@@ -25,6 +25,7 @@ final readonly class AddAlbumCommandHandler
             $command->title,
             $command->artist,
             $command->format,
+            $command->isFavorite,
             $command->releaseYear,
             $command->genre,
             $command->label,
